--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
 
 <h2>Selected Publications </h2>
 <ul>
+† indicates equal contribution.
+<li>Clinical Data Driven Cervical Cytologic Whole Slide Image Grading by Coupling Self-supervised and Supervised Contrastive Learning<br>
+    Lang Wang <sup>†</sup>, <b>Peng Jiang <sup>†</sup></b>, Wensi Duan, Dehua Cao, Baochuan Pang, Juan Liu.<br>
+    Submitted to <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2024).</i><br></li>
 <li>LGFFNet: Local-Global Features Fusion Network for Radiolucent Jaw Lesions Classification on CBCT Images<br>
     Hua Chen, Juan Liu, Wen Zhang, Zikang Chai, <b>Peng Jiang</b>, Jing Feng, Liang Mao, Zhijun Sun.<br></li> 
     Submitted to <i>Artificial Intelligence in Medicine (AIIM)</i>.<br>
@@ -142,7 +146,7 @@
     <i>International Conference on Neural Information Processing (ICONIP 2022).</i><br></li>
 <li>Real-Time Detection of Apple Leaf Diseases Using Deep Learning Approach Based on Improved Convolutional Neural Networks<br>
     <b>Peng Jiang</b>, Yuehan Chen, Bin Liu, Dongjian He, Chunquan Liang.<br>
-    <i>IEEE Access</i>, 2019,  <font color="red"><b>ESI Highly Cited Paper.</b> </font><br>
+    <i>IEEE Access</i>, 2019,  <font color="red"><b>ESI Highly Cited Paper, 500+ citations on Google Scholar.</b> </font><br>
 </ul>
 
 
