--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <h2>Selected Publications </h2>
 <ul>
 † indicates equal contribution.
-<li>Clinical Data Driven Cervical Cytologic Whole Slide Image Grading by Coupling Self-supervised and Supervised Contrastive Learning<br>
+<li>Coupling Self-supervised and Supervised Contrastive Learning for Multiple Classification of Cervical Cytological Whole Slide Images<br>
     Lang Wang <sup>†</sup>, <b>Peng Jiang <sup>†</sup></b>, Wensi Duan, Dehua Cao, Baochuan Pang, Juan Liu.<br>
     Submitted to <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2024).</i><br></li>
 <li>LGFFNet: Local-Global Features Fusion Network for Radiolucent Jaw Lesions Classification on CBCT Images<br>
