--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <i>International Conference on Neural Information Processing (ICONIP 2022).</i><br></li>
 <li>Real-Time Detection of Apple Leaf Diseases Using Deep Learning Approach Based on Improved Convolutional Neural Networks<br>
     <b>Peng Jiang</b>, Yuehan Chen, Bin Liu, Dongjian He, Chunquan Liang.<br>
-    <i>IEEE Access</i>, 2019,  <font color="red"><b>ESI Highly Cited Paper, 500+ citations on Google Scholar.</b> </font><br>
+    <i>IEEE Access</i>, 2019,  <font color="red"><b>ESI Highly Cited Paper, 500+ citations on Google Scholar.</b> </font><br></li>
 </ul>
 
 
