--- a/index.html
+++ b/index.html
@@ -106,48 +106,205 @@
 
 
 <h2>Selected Publications </h2>
-<ul>
-† indicates equal contribution.
-<li>Coupling Self-supervised and Supervised Contrastive Learning for Multiple Classification of Cervical Cytological Whole Slide Images<br>
-    Lang Wang <sup>†</sup>, <b>Peng Jiang <sup>†</sup></b>, Wensi Duan, Dehua Cao, Baochuan Pang, Juan Liu.<br>
-    Submitted to <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2024).</i><br></li>
-<li>LGFFNet: Local-Global Features Fusion Network for Radiolucent Jaw Lesions Classification on CBCT Images<br>
-    Hua Chen, Juan Liu, Wen Zhang, Zikang Chai, <b>Peng Jiang</b>, Jing Feng, Liang Mao, Zhijun Sun.<br></li> 
-    Submitted to <i>Artificial Intelligence in Medicine (AIIM)</i>.<br>
-<li>A Systematic Review of Deep Learning-based Cervical Cytology Screening: from Cell Identification to Whole Slide Image Analysis<br>
-    <b>Peng Jiang</b>, Xuekong Li, Hui Shen, Yuqi Chen, Lang Wang, Hua Chen, Jing Feng, Juan Liu.<br>
-    <i>Artificial Intelligence Review (AIR), 2023</i>.<br></li>
-<li>Deeply Supervised Layer Selective Attention Network: Towards Label-Efficient Learning for Medical Image Classification<br>
-    <b>Peng Jiang</b>, Juan Liu, Lang Wang, Zhihui Yang, Hongyu Dong, Jing Feng.<br>
-    arXiv preprint arXiv:2209.13844<br></li>
-<li>DDN: Dynamic Aggregation Enhanced Dual-Stream Network for Medical Image Classification<br>
-    Lang Wang, Juan Liu, <b>Peng Jiang</b>, Dehua Cao, Baochuan Pang.<br>
-    <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2023).</i><br></li>
-<li>LGViT: Local-Global Vision Transformer for Breast Cancer Histopathological Image Classification<br>
-    Lang Wang, Juan Liu, <b>Peng Jiang</b>, Dehua Cao, Baochuan Pang.<br>
-    <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2023).</i><br></li>
-<li>Medical Knowledge guided Intra-Specimen Reference Network for Cervical Cell Classification<br>
-    <b>Peng Jiang</b>, Juan Liu, Yuqi Chen, Hongyu Dong, Hua Chen, Baochuan Pang, Dehua Cao.<br>
-    <i>IEEE International Symposium on Biomedical Imaging (ISBI 2023).</i><br></li>
-<li>A novel multilevel iterative training strategy for the ResNet50 based mitotic cell classifier<br>
-    Yuqi Chen, Juan Liu, <b>Peng Jiang</b>, Yu Jin.<br>
-    <i>Asia Pacific Bioinformatics Conference (APBC 2023).</i><br></li>
-<li>Development of Automatic Portable Pathology Scanner and Its Evaluation for Clinical Practice<br>
-    <b>Peng Jiang</b>, Juan Liu, Qiang Luo, Baochuan Pang, Di Xiao, Dehua Cao.<br>
-    <i>Journal of Digital Imaging (JDI)</i>, 2023.<br></li>
-<li>Classifying Cervical Histopathological Whole Slide Images via Deep Multi-Instance Transfer Learning<br>
-    <b>Peng Jiang</b>, Juan Liu, Lang Wang, Jing Feng, Dehua Cao, Baochuan Pang.<br>
-    <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022)</i>.<br></li>
-<li>Predicting Tumor Mutation Burden of TNBC Based on Nuclei Scores of Histopathological Images<br>
-    Yuqi Chen, Juan Liu, <b>Peng Jiang</b>, Lang Wang, Baochuan Pang, Dehua Cao.<br>
-    <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022).</i><br></li>
-<li>Channel Spatial Collaborative Attention Network for Fine-grained Classification of Cervical Cells<br>
-    <b>Peng Jiang</b>, Juan Liu, Hua Chen, Cheng Li, Baochuan Pang, Dehua Cao.<br>
-    <i>International Conference on Neural Information Processing (ICONIP 2022).</i><br></li>
-<li>Real-Time Detection of Apple Leaf Diseases Using Deep Learning Approach Based on Improved Convolutional Neural Networks<br>
-    <b>Peng Jiang</b>, Yuehan Chen, Bin Liu, Dongjian He, Chunquan Liang.<br>
-    <i>IEEE Access</i>, 2019,  <font color="red"><b>ESI Highly Cited Paper, 500+ citations on Google Scholar.</b> </font><br></li>
-</ul>
+<p>† indicates equal contribution.</p>
+<table id="tbPublications" width="100%">
+	<tbody>
+		<tr>
+		<td width="270">
+		<img src="./Pubimages/Cervical-SCL.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> Coupling Self-supervised and Supervised Contrastive Learning for Multiple Classification of Cervical Cytological Whole Slide Images<br>
+		Lang Wang <sup>†</sup>, <b>Peng Jiang <sup>†</sup></b>, Wensi Duan, Dehua Cao, Baochuan Pang, Juan Liu.<br>
+		Submitted to <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2024).</i><br>
+		<p></p>
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+	<tr>&nbsp</tr>
+
+     <tr>
+		<td width="270">
+		<img src="./Pubimages/LGFFNet.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> LGFFNet: Local-Global Features Fusion Network for Radiolucent Jaw Lesions Classification on CBCT Images<br>
+		Hua Chen, Juan Liu, Wen Zhang, Zikang Chai, <b>Peng Jiang</b>, Jing Feng, Liang Mao, Zhijun Sun.<br></li> 
+		Submitted to <i>Artificial Intelligence in Medicine (AIIM)</i>.<br>
+		<p></p>
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+	<tr>&nbsp</tr>
+
+	<tr>
+		<td width="270">
+		<img src="./Pubimages/Systematic-Review.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> A Systematic Review of Deep Learning-based Cervical Cytology Screening: from Cell Identification to Whole Slide Image Analysis<br>
+		<b>Peng Jiang</b>, Xuekong Li, Hui Shen, Yuqi Chen, Lang Wang, Hua Chen, Jing Feng, Juan Liu.<br>
+		<i>Artificial Intelligence Review (AIR), 2023</i>.<br>
+		<p></p>
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+	<tr>&nbsp</tr>
+
+    <tr>
+		<td width="270">
+		<img src="./Pubimages/DSLSANet.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> Deeply Supervised Layer Selective Attention Network: Towards Label-Efficient Learning for Medical Image Classification<br>
+		<b>Peng Jiang</b>, Juan Liu, Lang Wang, Zhihui Yang, Hongyu Dong, Jing Feng.<br>
+		<i>arXiv preprint arXiv:2209.13844</i><br>
+		<p></p>
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+	<tr>&nbsp</tr>
+
+	<tr>
+		<td width="270">
+		<img src="./Pubimages/DDN.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> DDN: Dynamic Aggregation Enhanced Dual-Stream Network for Medical Image Classification<br>
+		Lang Wang, Juan Liu, <b>Peng Jiang</b>, Dehua Cao, Baochuan Pang.<br>
+		<i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2023).</i><br>
+		<p></p>
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+	<tr>&nbsp</tr>
+
+	<tr>
+		<td width="270">
+		<img src="./Pubimages/LGViT.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> LGViT: Local-Global Vision Transformer for Breast Cancer Histopathological Image Classification<br>
+		Lang Wang, Juan Liu, <b>Peng Jiang</b>, Dehua Cao, Baochuan Pang.<br>
+		<i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2023).</i><br>
+		<p></p>
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+	<tr>&nbsp</tr>
+
+	<tr>
+		<td width="270">
+		<img src="./Pubimages/IgrNet.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> Medical Knowledge guided Intra-Specimen Reference Network for Cervical Cell Classification<br>
+		<b>Peng Jiang</b>, Juan Liu, Yuqi Chen, Hongyu Dong, Hua Chen, Baochuan Pang, Dehua Cao.<br>
+		<i>IEEE International Symposium on Biomedical Imaging (ISBI 2023).</i><br>
+		<p></p>
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+	<tr>&nbsp</tr>
+
+	<tr>
+		<td width="270">
+		<img src="./Pubimages/Mitosis-Classify.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> A novel multilevel iterative training strategy for the ResNet50 based mitotic cell classifier<br>
+		Yuqi Chen, Juan Liu, <b>Peng Jiang</b>, Yu Jin.<br>
+		<i>Asia Pacific Bioinformatics Conference (APBC 2023).</i><br>
+		<p></p>
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+	<tr>&nbsp</tr>
+
+	<tr>
+		<td width="270">
+		<img src="./Pubimages/Landing-Smart.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> Development of Automatic Portable Pathology Scanner and Its Evaluation for Clinical Practice<br>
+		<b>Peng Jiang</b>, Juan Liu, Qiang Luo, Baochuan Pang, Di Xiao, Dehua Cao.<br>
+		<i>Journal of Digital Imaging (JDI)</i>, 2023.<br>
+		<p></p>
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+	<tr>&nbsp</tr>
+
+	<tr>
+		<td width="270">
+		<img src="./Pubimages/Cervical-Histo.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> Classifying Cervical Histopathological Whole Slide Images via Deep Multi-Instance Transfer Learning<br>
+		<b>Peng Jiang</b>, Juan Liu, Lang Wang, Jing Feng, Dehua Cao, Baochuan Pang.<br>
+		<i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022)</i>.<br>
+		<p></p>
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+
+	<tr>
+		<td width="270">
+		<img src="./Pubimages/Predicting-TMB.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+		</td>
+		<td> Predicting Tumor Mutation Burden of TNBC Based on Nuclei Scores of Histopathological Images<br>
+		Yuqi Chen, Juan Liu, <b>Peng Jiang</b>, Lang Wang, Baochuan Pang, Dehua Cao.<br>
+		<i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022).</i><br>
+		<p></p>
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+   	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+	<tr>&nbsp</tr>
+
+
+	<tr>
+		<td width="270">
+		<img src="./Pubimages/CSCAModule.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+		</td>
+		<td> Channel Spatial Collaborative Attention Network for Fine-grained Classification of Cervical Cells<br>
+		<b>Peng Jiang</b>, Juan Liu, Hua Chen, Cheng Li, Baochuan Pang, Dehua Cao.<br>
+		<i>International Conference on Neural Information Processing (ICONIP 2022).</i><br></li>
+		<p></p>
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>    
+	<tr>
+		<td width="280">
+		<img src="./Pubimages/INAR-SSD.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+		</td>
+		<td> Real-Time Detection of Apple Leaf Diseases Using Deep Learning Approach Based on Improved Convolutional Neural Networks<br>
+		<b>Peng Jiang</b>, Yuehan Chen, Bin Liu, Dongjian He, Chunquan Liang.<br>
+		<i>IEEE Access</i>, 2019. <br>
+		<p><font color="red"><b>ESI Highly Cited Paper, 500+ citations on Google Scholar.</b> </font></p>
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+	<tr>&nbsp</tr>
+	
+</tbody></table>
 
 
 <h2>Projects &amp; Competitions</h2>
