--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[10/2023] One paper was accepted by BIBM 2023.
+	</li>
+	<li>
 		[08/2023] One paper was accepted by Artificial Intelligence Review (IF: 12.0).
 	</li>
 	<li>
