--- a/index.html
+++ b/index.html
@@ -141,6 +141,20 @@
     	<tr>&nbsp</tr>
     	<tr>&nbsp</tr>
 	<tr>&nbsp</tr>
+	<tr>
+		<td width="270">
+		<img src="./Pubimages/MSCCNet.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> MSCCNet: Multi-Scale Convolution-Capsule Network for Cervical Cell Classification<br>
+		Hua Chen, Juan Liu, <b>Peng Jiang</b>, Yu Jin, Jing Feng, Baochuan Pang, Dehua Cao, Cheng Li.<br>
+		<i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2023)</i>.<br>
+		<p></p>
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+	<tr>&nbsp</tr>
 
 	<tr>
 		<td width="270">
