--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
 	
 <h2>Experiences</h2>
 <ul>
-	<li>2020.09-Present&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://biod.whu.edu.cn/">Biod Lab</a>, Wuhan University<br>
+	<li>2023.07-Present&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://biod.whu.edu.cn/">Biod Lab</a>, Wuhan University<br>
+	Research assistant advised by Prof. Juan Liu.&nbsp;&nbsp;&nbsp;&nbsp;Topic:<b> Medical image analysis</b>
+	</li>
+	<li>2020.09-2023.06&nbsp;&nbsp;&nbsp;&nbsp; Biod Lab, Wuhan University<br>
 	Master student advised by Prof. Juan Liu.&nbsp;&nbsp;&nbsp;&nbsp;Topic:<b> Automatic cervical cancer screening</b>
 	</li>
 	<li>2021.05-2022.04	&nbsp;&nbsp;&nbsp;&nbsp;Wuhan Landing Medical High-Tech Co. Ltd. (<a href="https://www.landing-med.com/">Landing Med</a>)<br>
