--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	I am now a research assistant in BIOD Lab, School of Computer Science, Wuhan University. I received my master degree from <a href="https://www.whu.edu.cn//">Wuhan University (WHU) </a> in 2023. 
 	Before that, I received my bachelor degree from <a href="https://www.nwsuaf.edu.cn/">Northwest A&F University (NWAFU) </a> in 2020.<br>
 	<br>
-	My research interests  mainly lie in Deep Learning, Object Detection and Medical Image Analysis. I am currently studying on automatic cervical cancer screening 
+	My research interests mainly lie in Deep Learning, Computational Pathology and Medical Image Analysis. I am currently studying on automatic cervical cancer screening 
 	and dedicate to incorporating medical domain knowledge with computational cytology.
 </p>
 
