--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[12/2023] One paper was accepted by ICASSP 2024.
+	</li>
+	<li>
 		[10/2023] One paper was accepted by BIBM 2023.
 	</li>
 	<li>
@@ -120,7 +123,7 @@
 		</td>		
 		<td> Coupling Self-supervised and Supervised Contrastive Learning for Multiple Classification of Cervical Cytological Whole Slide Images<br>
 		Lang Wang <sup>†</sup>, <b>Peng Jiang <sup>†</sup></b>, Wensi Duan, Dehua Cao, Baochuan Pang, Juan Liu.<br>
-		Submitted to <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2024).</i><br>
+		<i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2024).</i><br>
 		<p></p>
 		</td>
 	</tr>
