--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[03/2024] One paper was accepted by Computational Biology and Chemistry.
+	</li>
+	<li>
 		[12/2023] One paper was accepted by ICASSP 2024.
 	</li>
 	<li>
@@ -82,7 +85,7 @@
 		[01/2023] Two papers were accepted by APBC 2022.
 	</li>
 	<li>
-		[12/2022] One paper was accepted by Journal of Digital Imaging (IF: 4.4).
+		[12/2022] One paper was accepted by Journal of Digital Imaging.
 	</li>
 	<li>
 		[10/2022] Four papers were accepted by BIBM 2022.
