--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     	<tr>&nbsp</tr>
     	<tr>&nbsp</tr>
 	<tr>&nbsp</tr>
-
+	<!--
 	<tr>
 		<td width="270">
 		<img src="./Pubimages/Mitosis-Classify.png" width="260px" style="box-shadow: 4px 4px 8px #888">
@@ -249,7 +249,7 @@
 	<tr>&nbsp</tr>
     	<tr>&nbsp</tr>
     	<tr>&nbsp</tr>
-	<tr>&nbsp</tr>
+	<tr>&nbsp</tr>	-->
 
 	<tr>
 		<td width="270">
