--- a/index.html
+++ b/index.html
@@ -117,6 +117,34 @@
 <p>† indicates equal contribution.</p>
 <table id="tbPublications" width="100%">
 	<tbody>
+	<tr>
+		<td width="270">
+		<img src="./Pubimages/SPSA-CycleGAN.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> Color Normalization of Pathological Images Using Self-Attention based CycleGAN with Structural Preservation Loss<br>
+		 Zheng Chen <sup>†</sup>, <b>Peng Jiang <sup>†</sup></b>, Wensi Duan, Lang Wang, Jing Feng, Dehua Cao, Baochuan Pang, Juan Liu.<br>
+		Submitted to <i>Computers in Biology and Medicine (CIBM)</i>.<br>
+		<p></p>
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+	<tr>&nbsp</tr>
+	<tr>
+		<td width="270">
+		<img src="./Pubimages/DSAFFOGNet.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> Interpretable Detector for Cervical Cytology Using Self-Attention and Cell Origin Group Guidance<br>
+		<b>Peng Jiang, Juan Liu, Jing Feng, Huan Chen, Yuqi Chen, Dehua Cao, Baochuan Pang.<br>
+		Submitted to <i>Engineering Applications of Artificial Intelligence (EAAI)</i>.<br>
+		<p></p>
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+	<tr>&nbsp</tr>
 		<tr>
 		<td width="270">
 		<img src="./Pubimages/Cervical-SCL.png" width="260px" style="box-shadow: 4px 4px 8px #888">
