--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 		<img src="./Pubimages/DSAFFOGNet.png" width="260px" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> Interpretable Detector for Cervical Cytology Using Self-Attention and Cell Origin Group Guidance<br>
-		<b>Peng Jiang, Juan Liu, Jing Feng, Huan Chen, Yuqi Chen, Dehua Cao, Baochuan Pang.<br>
+		<b>Peng Jiang</b>, Juan Liu, Jing Feng, Huan Chen, Yuqi Chen, Dehua Cao, Baochuan Pang.<br>
 		Submitted to <i>Engineering Applications of Artificial Intelligence (EAAI)</i>.<br>
 		<p></p>
 		</td>
