--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 		<td width="230">
 		<img src="./Pubimages/SPSA-CycleGAN.png" width="220px" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> Stain Normalization of Pathological Images Using Attention based CycleGAN with Grey Scaled Consistency Loss<br>
+		<td> Stain Normalization of Pathological Images Using Self-Attention based CycleGAN with Grey Scaled Consistency Loss<br>
 		 Zheng Chen <sup>†</sup>, <b>Peng Jiang <sup>†</sup></b>, Wensi Duan, Lang Wang, Jing Feng, Dehua Cao, Baochuan Pang, Juan Liu.<br>
 		Submitted to <i>Computers in Biology and Medicine (CIBM)</i>.<br>
 		<p></p>
