--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[05/2024] One paper was accepted by Engineering Applications of Artificial Intelligence.
+	</li>
+	<li>
 		[03/2024] One paper was accepted by Computational Biology and Chemistry.
 	</li>
 	<li>
@@ -137,7 +140,7 @@
 		</td>		
 		<td> Interpretable Detector for Cervical Cytology Using Self-Attention and Cell Origin Group Guidance<br>
 		<b>Peng Jiang</b>, Juan Liu, Jing Feng, Huan Chen, Yuqi Chen, Dehua Cao, Baochuan Pang.<br>
-		Submitted to <i>Engineering Applications of Artificial Intelligence (EAAI)</i>.<br>
+		<i>Engineering Applications of Artificial Intelligence (EAAI), 2024</i>.<br>
 		<p></p>
 		</td>
 	</tr>
