--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     	<tr>&nbsp</tr>
     	<tr>&nbsp</tr>
 	<tr>&nbsp</tr>
-
+<!-- 
 	<tr>
 		<td width="230">
 		<img src="./Pubimages/Cervical-Histo.png" width="220px" style="box-shadow: 4px 4px 8px #888">
@@ -355,7 +355,7 @@
 	<tr>&nbsp</tr>
     	<tr>&nbsp</tr>
     	<tr>&nbsp</tr>
-	<tr>&nbsp</tr>
+	<tr>&nbsp</tr> -->
 	
 </tbody></table>
 
