--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     	<tr>&nbsp</tr>
     	<tr>&nbsp</tr>
 	<tr>&nbsp</tr>
-
+<!-- 
      <tr>
 		<td width="230">
 		<img src="./Pubimages/LGFFNet.png" width="220px" style="box-shadow: 4px 4px 8px #888">
@@ -176,7 +176,7 @@
 	<tr>&nbsp</tr>
     	<tr>&nbsp</tr>
     	<tr>&nbsp</tr>
-	<tr>&nbsp</tr>
+	<tr>&nbsp</tr>	-->
 	<tr>
 		<td width="230">
 		<img src="./Pubimages/MSCCNet.png" width="220px" style="box-shadow: 4px 4px 8px #888">
