--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[10/2024] One paper was accepted by BIBM 2024.
+	</li>
+	<li>
 		[05/2024] One paper was accepted by Engineering Applications of Artificial Intelligence.
 	</li>
 	<li>
