--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<div id="toptitle">					
 					<h1>Peng Jiang</h1><h1>
 					<h1>江鹏</h1></div>
-				<h3>Research Assistant</h3>
+				<h3>Ph.D. candidate</h3>
 				<p>
 					School of Computer Science<br>
 					Wuhan University  (武汉大学) <br>
@@ -52,7 +52,7 @@
 
 <h2>Biography</h2>
 <p>
-	I am now a research assistant in BIOD Lab, School of Computer Science, Wuhan University. I received my master degree from <a href="https://www.whu.edu.cn//">Wuhan University (WHU) </a> in 2023. 
+	I am now a Ph.D. candidate in BIOD Lab, School of Computer Science, Wuhan University. I received my master degree from <a href="https://www.whu.edu.cn//">Wuhan University (WHU) </a> in 2023. 
 	Before that, I received my bachelor degree from <a href="https://www.nwsuaf.edu.cn/">Northwest A&F University (NWAFU) </a> in 2020.<br>
 	<br>
 	My research interests mainly lie in Deep Learning, Computational Pathology and Medical Image Analysis. I am currently studying on automatic cervical cancer screening 
