--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[08/2025] One paper was accepted by Pattern Analysis and Applications.
+	</li>
+	<li>
 		[10/2024] One paper was accepted by BIBM 2024.
 	</li>
 	<li>
@@ -125,8 +128,8 @@
 		<img src="./Pubimages/SPSA-CycleGAN.png" width="220px" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> Stain Normalization of Pathological Images Using Self-Attention based CycleGAN with Grey Scaled Consistency Loss<br>
-		 Zheng Chen <sup>†</sup>, <b>Peng Jiang <sup>†</sup></b>, Wensi Duan, Lang Wang, Jing Feng, Dehua Cao, Baochuan Pang, Juan Liu.<br>
-		Submitted to <i>Computers in Biology and Medicine (CIBM)</i>.<br>
+		 Zheng Chen, <b>Peng Jiang</b>, Wensi Duan, Lang Wang, Jing Feng, Dehua Cao, Baochuan Pang, Juan Liu.<br>
+		<i>Pattern Analysis and Applications (PAA), 2025</i>.<br>
 		<p></p>
 		</td>
 	</tr>
